<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ljkjk.powod.activity.MainActivity">

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_tag"
        android:orderInCategory="100"
        android:title="@string/action_tag"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sorts"
        android:orderInCategory="100"
        android:title="@string/action_sorts"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_upload"
        android:orderInCategory="100"
        android:title="@string/action_upload"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_download"
        android:orderInCategory="100"
        android:title="@string/action_download"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
