<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ljkjk.powod.activity.WordDetailsActivity">

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_get_net_info"
        android:orderInCategory="100"
        android:title="@string/action_get_net_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_increase"
        android:orderInCategory="100"
        android:title="@string/action_increase"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_decrease"
        android:orderInCategory="100"
        android:title="@string/action_decrease"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="never" />

</menu>
