<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SettingActivityTemp">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_setting"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@drawable/ic_keyboard_arrow_left_white_24dp"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/toolbar_setting"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/setting_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/setting_input_ip"
                android:hint="@string/setting_input_ip"
                android:inputType="text"
                android:padding="8dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/setting_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/setting_input_port"
                android:hint="@string/setting_input_port"
                android:inputType="text"
                android:padding="8dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/setting_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/setting_input_project"
                android:hint="@string/setting_input_project"
                android:inputType="text"
                android:padding="8dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/version"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/textSecondary"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_setting_view_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_view_log"
            app:backgroundTint="@color/white"
            android:textColor="@color/blue" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_setting_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_clear"
            app:backgroundTint="@color/colorAccent"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>